--- a/pom.xml
+++ b/pom.xml
@@ -24,14 +24,27 @@
 
 	<build>
 		<plugins>
+			
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
+                		<groupId>org.apache.maven.plugins</groupId>
+                		<artifactId>maven-site-plugin</artifactId>
+                		<version>3.7.1</version>
+            		</plugin>
+
+            		<plugin>
+                		<groupId>org.apache.maven.plugins</groupId>
+                		<artifactId>maven-project-info-reports-plugin</artifactId>
+                		<version>3.0.0</version>
+            		</plugin>
+			
+			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
 				</configuration>
 				<version>${maven-compiler-plugin.version}</version>
+				
 			</plugin>
 		</plugins>
 	</build>
