--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 			<configuration>
 				<suiteXmlFiles>
 					<suiteXmlFile>testng.xml</suiteXmlFile>
-					<suiteXmlFiles>
+				</suiteXmlFiles>
 			</configuration>
 		</plugin>
 
